--- a/mon-projet-angular/angular.json
+++ b/mon-projet-angular/angular.json
@@ -93,7 +93,7 @@
                         "tsConfig": "src/tsconfig.spec.json",
                         "karmaConfig": "src/karma.conf.js",
                         "styles": [
-                            "../node_modules/bootstrap/dist/css/bootstrap.css",
+                            "node_modules/bootstrap/dist/css/bootstrap.css",
                             "src/styles.scss"
                         ],
                         "scripts": [],
